RESOLVED FIXED209949
FileSystem handle leaks in CurlCacheManager and NetworkCacheData when failed to open a file
https://bugs.webkit.org/show_bug.cgi?id=209949
Summary FileSystem handle leaks in CurlCacheManager and NetworkCacheData when failed ...
Yousuke Kimoto
Reported 2020-04-02 20:09:44 PDT
CurlCacheManager and NetwrorkCacheData uses FileSystem class's file handle, which leaks when it fails to open the file.
Attachments
patch (2.94 KB, patch)
2020-04-02 20:26 PDT, Yousuke Kimoto
no flags
patch (2.98 KB, patch)
2020-04-02 22:27 PDT, Yousuke Kimoto
fujii: review+
patch (2.98 KB, patch)
2020-04-02 23:10 PDT, Yousuke Kimoto
no flags
Yousuke Kimoto
Comment 1 2020-04-02 20:26:12 PDT
Yousuke Kimoto
Comment 2 2020-04-02 22:27:36 PDT
Fujii Hironori
Comment 3 2020-04-02 23:02:49 PDT
Comment on attachment 395348 [details] patch View in context: https://bugs.webkit.org/attachment.cgi?id=395348&action=review > Source/WebCore/ChangeLog:9 > + return its status. The handle should be relased before returning. relased → released
Yousuke Kimoto
Comment 4 2020-04-02 23:09:17 PDT
>> Source/WebCore/ChangeLog:9 >> + return its status. The handle should be relased before returning. > >relased → released Thank you. I'll fix it.
Yousuke Kimoto
Comment 5 2020-04-02 23:10:48 PDT
Yousuke Kimoto
Comment 6 2020-04-03 01:27:14 PDT
Fujii-san, thank you for your quick review!
EWS
Comment 7 2020-04-03 01:39:04 PDT
Committed r259449: <https://trac.webkit.org/changeset/259449> All reviewed patches have been landed. Closing bug and clearing flags on attachment 395351 [details].
Radar WebKit Bug Importer
Comment 8 2020-04-03 01:40:14 PDT
Note You need to log in before you can comment on or make changes to this bug.