FileSystem handle leaks in CurlCacheManager and NetworkCacheData when failed to open a file https://bugs.webkit.org/show_bug.cgi?id=209949

Reviewed by Fujii Hironori.

A file handle of FileSystem is not closed when the file handle doesn't
return its status. The handle should be released before returning.

No new tests, no behavior change.

Source/WebCore:

* platform/network/curl/CurlCacheManager.cpp:
(WebCore::CurlCacheManager::loadIndex):

Source/WebKit:

* NetworkProcess/cache/NetworkCacheData.cpp:
(WebKit::NetworkCache::mapFile):


Canonical link: https://commits.webkit.org/222870@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@259449 268f45cc-cd09-0410-ab3c-d52691b4dbfc